Networking/cloud-native/istio/deploys/05.dark-release/6-istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*' # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  hosts: # which incoming host are we applying the proxy rules to???
    - '*'
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
        - headers: # IF
            my-header: # If there is a header called "my-header"...
              exact: canary # The value of this header is exactly "canary"
      route: # THEN
        - destination:
            host: fleetman-webapp
            subset: experimental

    - route: # A route without a "match" element. It's a Catch-all
        - destination:
            host: fleetman-webapp
            subset: original
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  host: fleetman-webapp
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
